--- a/packages/reactapp/package.json
+++ b/packages/reactapp/package.json
@@ -4,9 +4,6 @@
   "private": true,
   "dependencies": {
     "@craco/craco": "^6.3.0",
-    "@fortawesome/fontawesome-svg-core": "^1.2.36",
-    "@fortawesome/free-solid-svg-icons": "^5.15.4",
-    "@fortawesome/react-fontawesome": "^0.1.16",
     "@reduxjs/toolkit": "^1.5.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
@@ -17,6 +14,7 @@
     "@types/react-dom": "^16.9.0",
     "@types/react-redux": "^7.1.7",
     "@types/styled-components": "^5.1.15",
+    "add": "^2.0.6",
     "formik": "^2.2.9",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -24,7 +22,8 @@
     "react-scripts": "4.0.3",
     "styled-components": "^5.3.1",
     "twin.macro": "^2.7.0",
-    "typescript": "~4.1.5"
+    "typescript": "~4.1.5",
+    "yarn": "^1.22.18"
   },
   "scripts": {
     "start": "craco start",
