--- a/packages/todo-api/package.json
+++ b/packages/todo-api/package.json
@@ -1,6 +1,6 @@
 {
   "name": "todo-api",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "description": "",
   "author": "",
   "private": true,
@@ -22,14 +22,14 @@
   },
   "dependencies": {
     "@hapi/joi": "^17.1.1",
-    "@nestjs/common": "^8.0.0",
     "@nestjs/config": "^1.0.1",
+    "@nestjs/common": "^8.0.0",
     "@nestjs/core": "^8.0.0",
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/typeorm": "^8.0.2",
     "@types/hapi__joi": "^17.1.7",
-    "class-transformer": "^0.4.0",
+    "class-transformer": "0.4.0",
     "class-validator": "^0.13.1",
     "pg": "^8.7.1",
     "reflect-metadata": "^0.1.13",
